force-app/main/default/objects/TL_Programme__c/TL_Programme__c.object-meta.xml
<CustomObject>
    <label>ML Programme</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Programme Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>