force-app/main/default/objects/TL_Programme__c/fields/Additional_add_ons__c.field-meta.xml
<CustomField>
    <fullName>Additional_add_ons__c</fullName>
    <label>Additional add-ons</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>