force-app/main/default/objects/TL_Programme__c/fields/Alliance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alliance Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cohorts (Alliance Partner)</relationshipLabel>
    <relationshipName>Cohort_Alliance_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>