force-app/main/default/objects/TL_Programme__c/fields/Attendance_Absence__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Absence__c</fullName>
    <label>Attendance &amp; Absence</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>