force-app/main/default/objects/TL_Programme__c/fields/Batch_InProgress__c.field-meta.xml
<CustomField>
    <fullName>Batch_InProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch InProgress</label>
    <type>Checkbox</type>
</CustomField>