force-app/main/default/objects/TL_Programme__c/fields/Box_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_ID__c</fullName>
    <label>Box Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>