force-app/main/default/objects/TL_Programme__c/fields/Canvas_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if the Canvas Launcher should display in My Ambition</description>
    <inlineHelpText>Check this field if the Canvas Launcher should display in My Ambition</inlineHelpText>
    <label>Canvas Enabled</label>
    <type>Checkbox</type>
</CustomField>