force-app/main/default/objects/TL_Programme__c/fields/Cohort_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Duration_Months__c</fullName>
    <label>Cohort Duration (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>