force-app/main/default/objects/TL_Programme__c/fields/Cohort_ID_Full__c.field-meta.xml
<CustomField>
    <fullName>Cohort_ID_Full__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Cohort ID Full</label>
    <type>Text</type>
</CustomField>