force-app/main/default/objects/TL_Programme__c/fields/Cohort_Name__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Name__c</fullName>
    <description>Used in the Learning Lounge Lightning Community</description>
    <label>Cohort Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>