force-app/main/default/objects/TL_Programme__c/fields/Cohort_participant_information_received__c.field-meta.xml
<CustomField>
    <fullName>Cohort_participant_information_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cohort participant information received</label>
    <type>Checkbox</type>
</CustomField>