force-app/main/default/objects/TL_Programme__c/fields/Cohort_registration_form_received__c.field-meta.xml
<CustomField>
    <fullName>Cohort_registration_form_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cohort registration form received</label>
    <type>Checkbox</type>
</CustomField>