force-app/main/default/objects/TL_Programme__c/fields/Cohort_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Start_Date__c</fullName>
    <description>Used in the Learning Lounge Lightning Community</description>
    <label>Cohort Start Date</label>
    <type>Date</type>
</CustomField>