force-app/main/default/objects/TL_Programme__c/fields/Cohort_Status__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Status__c</fullName>
    <description>Used in the Learning Lounge Lightning Community</description>
    <label>Cohort Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>