force-app/main/default/objects/TL_Programme__c/fields/Content_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Folder_Name__c</fullName>
    <label>Content Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>