force-app/main/default/objects/TL_Programme__c/fields/Contract_received__c.field-meta.xml
<CustomField>
    <fullName>Contract_received__c</fullName>
    <label>Contract received</label>
    <type>Date</type>
</CustomField>