force-app/main/default/objects/TL_Programme__c/fields/Contract_sent__c.field-meta.xml
<CustomField>
    <fullName>Contract_sent__c</fullName>
    <label>Contract sent</label>
    <type>Date</type>
</CustomField>