force-app/main/default/objects/TL_Programme__c/fields/Data_Upload_1_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Upload_1_End_Date__c</fullName>
    <label>Data Upload 1 End Date</label>
    <type>Date</type>
</CustomField>