force-app/main/default/objects/TL_Programme__c/fields/Delivery_Plan_sent_to_school_date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Plan_sent_to_school_date__c</fullName>
    <label>Delivery Plan sent to school date</label>
    <type>Date</type>
</CustomField>