force-app/main/default/objects/TL_Programme__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Cohort Name Desc</label>
    <type>TextArea</type>
</CustomField>