force-app/main/default/objects/TL_Programme__c/fields/Discount_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Discount_Criteria__c</fullName>
    <label>Discount Criteria</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>