force-app/main/default/objects/TL_Programme__c/fields/Do_Not_Show_Events_Tab__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Show_Events_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Show Events Tab</label>
    <type>Checkbox</type>
</CustomField>