force-app/main/default/objects/TL_Programme__c/fields/Do_Not_Show_Jobs_Tab__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Show_Jobs_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box to prevent the Jobs tab on the Portal being shown to ALL participants of this cohort</inlineHelpText>
    <label>Do Not Show Jobs Tab</label>
    <type>Checkbox</type>
</CustomField>