force-app/main/default/objects/TL_Programme__c/fields/End_review_complete__c.field-meta.xml
<CustomField>
    <fullName>End_review_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End review complete</label>
    <type>Checkbox</type>
</CustomField>