force-app/main/default/objects/TL_Programme__c/fields/Evaluation_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Requirements__c</fullName>
    <label>Evaluation Requirements</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>