force-app/main/default/objects/TL_Programme__c/fields/Expected_Submission_Window__c.field-meta.xml
<CustomField>
    <fullName>Expected_Submission_Window__c</fullName>
    <inlineHelpText>NPQ Expected Submission Window</inlineHelpText>
    <label>Expected Submission Window</label>
    <type>Date</type>
</CustomField>