force-app/main/default/objects/TL_Programme__c/fields/Final_50_invoice_sent__c.field-meta.xml
<CustomField>
    <fullName>Final_50_invoice_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final 50% invoice sent</label>
    <type>Checkbox</type>
</CustomField>