force-app/main/default/objects/TL_Programme__c/fields/Final_Data_Upload_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Data_Upload_End_Date__c</fullName>
    <label>Final Data Upload End Date</label>
    <type>Date</type>
</CustomField>