force-app/main/default/objects/TL_Programme__c/fields/Final_Data_Upload_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Data_Upload_Start_Date__c</fullName>
    <label>Final Data Upload Start Date</label>
    <type>Date</type>
</CustomField>