force-app/main/default/objects/TL_Programme__c/fields/First_50_invoice_sent__c.field-meta.xml
<CustomField>
    <fullName>First_50_invoice_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First 50% invoice sent</label>
    <type>Checkbox</type>
</CustomField>