force-app/main/default/objects/TL_Programme__c/fields/ID_from_FullTest__c.field-meta.xml
<CustomField>
    <fullName>ID_from_FullTest__c</fullName>
    <label>ID from FullTest</label>
    <length>18</length>
    <type>Text</type>
</CustomField>