force-app/main/default/objects/TL_Programme__c/fields/II_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>II_Completion_Date__c</fullName>
    <label>II Completion Date</label>
    <type>Date</type>
</CustomField>