force-app/main/default/objects/TL_Programme__c/fields/Important_information__c.field-meta.xml
<CustomField>
    <fullName>Important_information__c</fullName>
    <inlineHelpText>Important information to be Included in the Contract</inlineHelpText>
    <label>Important information</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>