force-app/main/default/objects/TL_Programme__c/fields/Intervention_invoice_sent__c.field-meta.xml
<CustomField>
    <fullName>Intervention_invoice_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Products invoice sent</label>
    <type>Checkbox</type>
</CustomField>