force-app/main/default/objects/TL_Programme__c/fields/LCF_end_of_programme_completion_date__c.field-meta.xml
<CustomField>
    <fullName>LCF_end_of_programme_completion_date__c</fullName>
    <label>LCF end of programme completion date</label>
    <type>Date</type>
</CustomField>