force-app/main/default/objects/TL_Programme__c/fields/Lead_facilitator_name__c.field-meta.xml
<CustomField>
    <fullName>Lead_facilitator_name__c</fullName>
    <label>Lead facilitator name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>