force-app/main/default/objects/TL_Programme__c/fields/Lead_facilitator_trained__c.field-meta.xml
<CustomField>
    <fullName>Lead_facilitator_trained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead facilitator trained</label>
    <type>Checkbox</type>
</CustomField>