force-app/main/default/objects/TL_Programme__c/fields/Lead_facilitator_trained_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_facilitator_trained_Date__c</fullName>
    <label>Lead facilitator trained Date</label>
    <type>Date</type>
</CustomField>