force-app/main/default/objects/TL_Programme__c/fields/LMS_Access__c.field-meta.xml
<CustomField>
    <fullName>LMS_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canvas Access</label>
    <type>Checkbox</type>
</CustomField>