force-app/main/default/objects/TL_Programme__c/fields/LMS_Additional_Course_Section_Id_2__c.field-meta.xml
<CustomField>
    <fullName>LMS_Additional_Course_Section_Id_2__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Please note changing or removing a Course Section ID in this field will NOT result in the participants being removed from the course in Canvas. This has to be done manually. Please contact the system administrator for more information</inlineHelpText>
    <label>Additional Canvas Course Section ID 2</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>