force-app/main/default/objects/TL_Programme__c/fields/LMS_Course_Id__c.field-meta.xml
<CustomField>
    <fullName>LMS_Course_Id__c</fullName>
    <defaultValue>null</defaultValue>
    <externalId>true</externalId>
    <label>Primary Canvas Course ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>