force-app/main/default/objects/TL_Programme__c/fields/LMS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_End_Date__c</fullName>
    <inlineHelpText>If the Canvas End Date has passed participants will have been removed from the course and extending it WILL NOT give them access again.  To extend access change the Canvas Start Date as required.</inlineHelpText>
    <label>Canvas End Date</label>
    <type>Date</type>
</CustomField>