force-app/main/default/objects/TL_Programme__c/fields/LMS_Provision_Primary_Course__c.field-meta.xml
<CustomField>
    <fullName>LMS_Provision_Primary_Course__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls if the automatic provision for the Primary Canvas course should happen or not</description>
    <label>Provision Primary Canvas Course</label>
    <type>Checkbox</type>
</CustomField>