force-app/main/default/objects/TL_Programme__c/fields/LMS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Start_Date__c</fullName>
    <label>Canvas Start Date</label>
    <type>Date</type>
</CustomField>