force-app/main/default/objects/TL_Programme__c/fields/Meeting_1_Completed__c.field-meta.xml
<CustomField>
    <fullName>Meeting_1_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting 1 Completed</label>
    <type>Checkbox</type>
</CustomField>