force-app/main/default/objects/TL_Programme__c/fields/Meeting_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_1_Date__c</fullName>
    <label>Meeting 1 Date</label>
    <type>Date</type>
</CustomField>