force-app/main/default/objects/TL_Programme__c/fields/Meeting_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_2_Date__c</fullName>
    <label>Meeting 2 Date</label>
    <type>Date</type>
</CustomField>