force-app/main/default/objects/TL_Programme__c/fields/Midpoint_review_sent__c.field-meta.xml
<CustomField>
    <fullName>Midpoint_review_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Midpoint review sent</label>
    <type>Checkbox</type>
</CustomField>