force-app/main/default/objects/TL_Programme__c/fields/MLIP_complete__c.field-meta.xml
<CustomField>
    <fullName>MLIP_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLIP complete</label>
    <type>Checkbox</type>
</CustomField>