force-app/main/default/objects/TL_Programme__c/fields/Non_completion_terms_and_costs__c.field-meta.xml
<CustomField>
    <fullName>Non_completion_terms_and_costs__c</fullName>
    <label>Non-completion terms and costs</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>