force-app/main/default/objects/TL_Programme__c/fields/NPQ_Tasks_No__c.field-meta.xml
<CustomField>
    <fullName>NPQ_Tasks_No__c</fullName>
    <formula>Programme_Definition__r.NPQ_Tasks_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPQ Tasks No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>