force-app/main/default/objects/TL_Programme__c/fields/Number_of_Coaching_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Coaching_Sessions__c</fullName>
    <label>Number of Coaching Sessions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>