force-app/main/default/objects/TL_Programme__c/fields/Number_of_NPQ_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Number_of_NPQ_Awarded__c</fullName>
    <label>Number of NPQ Awarded</label>
    <summaryFilterItems>
        <field>Programme_Participant__c.NPQ_Status__c</field>
        <operation>equals</operation>
        <value>1st Fail</value>
    </summaryFilterItems>
    <summaryForeignKey>Programme_Participant__c.Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>