force-app/main/default/objects/TL_Programme__c/fields/Orientation_Webinar_Completed__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Webinar_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation Webinar Completed</label>
    <type>Checkbox</type>
</CustomField>