force-app/main/default/objects/TL_Programme__c/fields/Orientation_Webinar_Date__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Webinar_Date__c</fullName>
    <label>Orientation Webinar Date</label>
    <type>Date</type>
</CustomField>