force-app/main/default/objects/TL_Programme__c/fields/Participant_fee__c.field-meta.xml
<CustomField>
    <fullName>Participant_fee__c</fullName>
    <label>Participant fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>