force-app/main/default/objects/TL_Programme__c/fields/Payment_schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_schedule__c</fullName>
    <label>Payment schedule</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>