force-app/main/default/objects/TL_Programme__c/fields/Prog_specific_Ambition_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Prog_specific_Ambition_Responsibilities__c</fullName>
    <label>Prog-specific Ambition Responsibilities</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>