force-app/main/default/objects/TL_Programme__c/fields/Programme_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Programme_Characteristics__c</fullName>
    <label>Programme Characteristics</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>