force-app/main/default/objects/TL_Programme__c/fields/Programme_Code__c.field-meta.xml
<CustomField>
    <fullName>Programme_Code__c</fullName>
    <formula>Programme_Definition__r.Programme_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme Code</label>
    <type>Text</type>
</CustomField>