force-app/main/default/objects/TL_Programme__c/fields/Programme_Definition__c.field-meta.xml
<CustomField>
    <fullName>Programme_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in the Learning Lounge Lightning Community</description>
    <label>Programme Definition</label>
    <referenceTo>Programme_Definition__c</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>