force-app/main/default/objects/TL_Programme__c/fields/Programme_Elements_purchased__c.field-meta.xml
<CustomField>
    <fullName>Programme_Elements_purchased__c</fullName>
    <label>Programme Elements purchased</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Session top up, 4</fullName>
            </value>
            <value>
                <fullName>Session top up, 8</fullName>
            </value>
            <value>
                <fullName>DIY coaching</fullName>
            </value>
            <value>
                <fullName>Coaching skills</fullName>
            </value>
            <value>
                <fullName>Facilitation skills</fullName>
            </value>
            <value>
                <fullName>Schools viva</fullName>
            </value>
            <value>
                <fullName>Audit and planning review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>