force-app/main/default/objects/TL_Programme__c/fields/Programme_Name__c.field-meta.xml
<CustomField>
    <fullName>Programme_Name__c</fullName>
    <formula>Programme_Definition__r.Programme__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme Name</label>
    <type>Text</type>
</CustomField>