force-app/main/default/objects/TL_Programme__c/fields/Programme_Name_searchable__c.field-meta.xml
<CustomField>
    <fullName>Programme_Name_searchable__c</fullName>
    <description>This field is created to make Programme Name searchable</description>
    <label>Programme Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>