force-app/main/default/objects/TL_Programme__c/fields/Programme_phase__c.field-meta.xml
<CustomField>
    <fullName>Programme_phase__c</fullName>
    <formula>Text(Opportunity__r.Programme_phase__c)</formula>
    <label>Programme phase</label>
    <type>Text</type>
</CustomField>