force-app/main/default/objects/TL_Programme__c/fields/Programme_specific_definitions_TOR__c.field-meta.xml
<CustomField>
    <fullName>Programme_specific_definitions_TOR__c</fullName>
    <label>Programme-specific definitions (TOR)</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>