force-app/main/default/objects/TL_Programme__c/fields/Programme_specific_eligibility_criteria__c.field-meta.xml
<CustomField>
    <fullName>Programme_specific_eligibility_criteria__c</fullName>
    <inlineHelpText>Programme-specific eligibility criteria e.g Job Role</inlineHelpText>
    <label>Programme-specific eligibility criteria</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>