force-app/main/default/objects/TL_Programme__c/fields/Programme_specific_school_obligations__c.field-meta.xml
<CustomField>
    <fullName>Programme_specific_school_obligations__c</fullName>
    <inlineHelpText>Programme-specific school obligations (beyond enabling participant&#39;s attendance)</inlineHelpText>
    <label>Programme-specific school obligations</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>