force-app/main/default/objects/TL_Programme__c/fields/Programme_Status__c.field-meta.xml
<CustomField>
    <fullName>Programme_Status__c</fullName>
    <label>Programme Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Programme Planning Started</fullName>
            </value>
            <value>
                <fullName>Programme In-Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Needs analysis conducted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>