force-app/main/default/objects/TL_Programme__c/fields/Programme_Type__c.field-meta.xml
<CustomField>
    <fullName>Programme_Type__c</fullName>
    <label>Programme Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aspiring Leadership Programme (ALP)</fullName>
            </value>
            <value>
                <fullName>Middle Leadership Programme (MLP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>