force-app/main/default/objects/TL_Programme__c/fields/QA_visit_conducted__c.field-meta.xml
<CustomField>
    <fullName>QA_visit_conducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA visit conducted</label>
    <type>Checkbox</type>
</CustomField>