force-app/main/default/objects/TL_Programme__c/fields/QA_visit_conducted_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_visit_conducted_Date__c</fullName>
    <label>QA visit conducted Date</label>
    <type>Date</type>
</CustomField>