force-app/main/default/objects/TL_Programme__c/fields/Recruiting__c.field-meta.xml
<CustomField>
    <fullName>Recruiting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recruiting</label>
    <type>Checkbox</type>
</CustomField>