force-app/main/default/objects/TL_Programme__c/fields/Registered_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Start_Date__c</fullName>
    <inlineHelpText>NPQ Registered Start Date</inlineHelpText>
    <label>Registered Start Date</label>
    <type>Date</type>
</CustomField>