force-app/main/default/objects/TL_Programme__c/fields/Roles_and_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Roles_and_Responsibilities__c</fullName>
    <inlineHelpText>Roles and Responsibilities (time and other considerations)</inlineHelpText>
    <label>Roles and Responsibilities</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>