force-app/main/default/objects/TL_Programme__c/fields/School_Count__c.field-meta.xml
<CustomField>
    <fullName>School_Count__c</fullName>
    <label>School Count</label>
    <summaryForeignKey>School__c.Programme__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>