force-app/main/default/objects/TL_Programme__c/fields/School_Offer__c.field-meta.xml
<CustomField>
    <fullName>School_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Offer</label>
    <type>Checkbox</type>
</CustomField>