force-app/main/default/objects/TL_Programme__c/fields/Show_Attendance_Score__c.field-meta.xml
<CustomField>
    <fullName>Show_Attendance_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Attendance Score</label>
    <type>Checkbox</type>
</CustomField>