force-app/main/default/objects/TL_Programme__c/fields/Show_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Show_Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Note that this is SHOW Marketplace not Do Not Show</inlineHelpText>
    <label>Show Marketplace</label>
    <type>Checkbox</type>
</CustomField>