force-app/main/default/objects/TL_Programme__c/fields/Show_My_Resources_Tab__c.field-meta.xml
<CustomField>
    <fullName>Show_My_Resources_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show My Resources Tab</label>
    <type>Checkbox</type>
</CustomField>