force-app/main/default/objects/TL_Programme__c/fields/Summary_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Events__c</fullName>
    <inlineHelpText>This is a summary of the event types, and not specific events.  For example &quot;1 x Residental, 10 x Mandatory Event&quot;</inlineHelpText>
    <label>Summary of Events</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>